Added header, favicon, logo

--- a/src/routes/homepage/template.marko
+++ b/src/routes/homepage/template.marko
@@ -1,1 +1,5 @@
-<layout></layout>
+<layout-homepage>
+    <@body>
+        The content of the documents with HTTP/2......
+    </@body>
+</layout-homepage>
