--- a/src/routes/homepage/template.marko
+++ b/src/routes/homepage/template.marko
@@ -1,5 +1,5 @@
 <layout-homepage>
     <@body>
-        The content of the documents with HTTP/2......
+        <post-summary />
     </@body>
 </layout-homepage>
