post author, emojis

--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -5,6 +5,7 @@
     <head>
         <title>PureJS</title>
         <favicon />
+        <meta charset='utf-8'>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <include(input.layoutHead) />
