--- a/src/components/wrapper/index.marko
+++ b/src/components/wrapper/index.marko
@@ -1,8 +1,9 @@
 style {
     .wrapper {
         margin: 0px auto;
+        width:100%;
     }
 }
 
-div.wrapper style="width: ${input.width}px"
+div.wrapper style="max-width: ${input.width}px"
     include(input.content)
