--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -3,6 +3,7 @@
     background-color: white;
     box-sizing: border-box;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 .header a{
@@ -14,7 +15,6 @@
 }
 
 .header a{
-    text-decoration: none;
     height: 50px;
     line-height: 50px;
     float: left;
