--- a/src/components/root-html/style.css
+++ b/src/components/root-html/style.css
@@ -4,3 +4,8 @@ body{
     font-family: 'Roboto', sans-serif;
     color: rgba(0,0,0,0.75);
 }
+
+a{
+    text-decoration: none;
+    color:inherit;
+}
