--- a/src/components/emoji/index.marko
+++ b/src/components/emoji/index.marko
@@ -2,10 +2,11 @@ $ {
     const emojis = {
         'man-blonde': '👨🏼',
         'man': '👦🏻',
-        'calendar': '📅'
+        'calendar': '📅',
+        'link': '🔗'
     };
 
-    const emoji = input.code ? (emojis[input.code] || '') : ''
+    const emoji = input.code ? (emojis[input.code] || '') : '';
 }
 
 -- $!{emoji}
