--- a/src/routes/homepage/template.marko
+++ b/src/routes/homepage/template.marko
@@ -1,5 +1,8 @@
 <layout-homepage>
     <@body>
         <post-summary />
+        <post-summary />
+        <post-summary />
+        <post-summary />
     </@body>
 </layout-homepage>
