--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -36,10 +36,34 @@
     text-align: center;
     width: 30px;
     transition-duration: 0.2s;
+    background-color: transparent;
 }
 
 .header input:focus{
     outline: none;
     border-bottom: 1px solid #719ECE;
     width: 195px;
+}
+
+@media only screen and (max-width: 500px) {
+    .header img{
+        width: 30px;
+        height: 30px;
+        margin-top: 10px;
+    }
+
+    .header a{
+        width: 20px;
+        height: 20px;
+        font-size: 21px;
+        margin-left: 5px;
+    }
+
+    .header div span {
+        font-size: 14px;
+    }
+
+    .header input:focus{
+        width: 80px;
+    }
 }
