header pwa mobile compability

--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -3,6 +3,6 @@ div.header
     a href="/"
         -- PureJS
     div.search
-        span -- PureJS.hasOwnProperty(
+        span -- PureJS.hasOwnProperty('
         input type="text"
-        span -- );
+        span -- ');
