--- a/src/components/layout-homepage/index.marko
+++ b/src/components/layout-homepage/index.marko
@@ -5,6 +5,7 @@
     <@layoutContent>
         <header/>
         <wrapper width=720>
+            -- test
             <@content>
                 <include(input.body) />
             </@content>
