--- a/src/components/layout-homepage/index.marko
+++ b/src/components/layout-homepage/index.marko
@@ -4,8 +4,7 @@
     </@layoutHead>
     <@layoutContent>
         <header/>
-        <wrapper width=720>
-            -- test
+        <wrapper width=720 mobilePadding=10>
             <@content>
                 <include(input.body) />
             </@content>
