--- a/src/routes/homepage/template.marko
+++ b/src/routes/homepage/template.marko
@@ -1,7 +1,11 @@
 <layout-homepage>
     <@body>
         <post-summary />
+        <post-summary type="black"/>
         <post-summary />
+        <post-summary />
+        <post-summary />
+        <post-summary type="blue"/>
         <post-summary />
         <post-summary />
     </@body>
