service worker, pwa manifest, ssl fix, offline layout.

--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -2,7 +2,7 @@ div.header
     lasso-img src="./logo.png" width=50 height=50
     a href="/"
         -- PureJS
-    div.search
+    div.search if(!input.disableSearch)
         span -- PureJS.hasOwnProperty('
         input type="text"
         span -- ');
