--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -7,6 +7,7 @@
         <favicon />
         <meta charset='utf-8'>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="manifest" href="/manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <include(input.layoutHead) />
         <lasso-head/>
