Mobile browser bg

--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -6,7 +6,7 @@
         <title>PureJS</title>
         <favicon />
         <meta charset='utf-8'>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <meta name="theme-color" content="#92A37D">
         <link rel="manifest" href="/manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <include(input.layoutHead) />
@@ -16,5 +16,6 @@
     <body>
         <include(input.layoutContent) />
         <lasso-body/>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </body>
 </html>
