Homepage navigation, emojis.

--- a/src/components/emoji/index.marko
+++ b/src/components/emoji/index.marko
@@ -3,7 +3,11 @@ $ {
         'man-blonde': '👨🏼',
         'man': '👦🏻',
         'calendar': '📅',
-        'link': '🔗'
+        'link': '🔗',
+        'newspaper': '📰',
+        'course': '📚',
+        'toolbox': '⚡',
+        'snippets': '💼'
     };
 
     const emoji = input.code ? (emojis[input.code] || '') : '';
