--- a/src/components/layout-homepage/index.marko
+++ b/src/components/layout-homepage/index.marko
@@ -1,10 +1,12 @@
+<lasso-page package-path="./browser.json"/>
+
 <root-html>
     <@layoutHead>
         <include(input.head) />
     </@layoutHead>
     <@layoutContent>
         <header/>
-        <wrapper width=720 mobilePadding=10>
+        <wrapper width=860 mobilePadding=10>
             <@content>
                 <include(input.body) />
             </@content>
