--- a/src/routes/homepage/template.marko
+++ b/src/routes/homepage/template.marko
@@ -1,12 +1,4 @@
-<layout-homepage>
-    <@body>
-        <post-summary />
-        <post-summary type="black"/>
-        <post-summary />
-        <post-summary />
-        <post-summary />
-        <post-summary type="blue"/>
-        <post-summary />
-        <post-summary />
-    </@body>
-</layout-homepage>
+layout-homepage
+    @body
+        left-content-navigation
+        posts-container width=720 float='right'
