Homepage navigation, emojis, post detail.

--- a/src/components/emoji/index.marko
+++ b/src/components/emoji/index.marko
@@ -7,7 +7,8 @@ $ {
         'newspaper': '📰',
         'course': '📚',
         'toolbox': '⚡',
-        'snippets': '💼'
+        'snippets': '💼',
+        'video':'🎬'
     };
 
     const emoji = input.code ? (emojis[input.code] || '') : '';
