--- a/src/components/left-content-navigation/index.marko
+++ b/src/components/left-content-navigation/index.marko
@@ -1,52 +1,37 @@
-style {
-    .left-buttons {
-        float: left;
-        top: 20px;
-    }
-
-    .nav-box{
-        height: 100px;
-        width: 100px;
-        background-color: white;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    .nav-text{
-        transition-duration: 0.2s;
-        font-size: 1.15rem;
-    }
-    .nav-icon{
-        transition-duration: 0.2s;
-        font-size: 2rem;
-        line-height: 60px;
-    }
-    .nav-box:hover .nav-text {
-        font-size: 1.25rem;
-    }
+$ {
+    const navigations = [
+        {
+            text: 'HOME',
+            emoji: 'newspaper',
+            url: '/'
+        },
+        {
+            text: 'COURSES',
+            emoji: 'course',
+            url: '/courses'
+        },
+        {
+             text: 'VIDEOS',
+             emoji: 'video',
+             url: '/videos'
+        },
+        {
+            text: 'SNIPPETS',
+            emoji: 'snippets',
+            url: '/snippets'
+        },
+        {
+            text: 'TOOLBOX',
+            emoji: 'toolbox',
+            url: '/toolbox'
+        },
+    ]
 }
 
 div.left-buttons#nav
-    div.nav-box
-        a href='#'
+    div.nav-box for(navigation in navigations)
+        a href=navigation.url
             div.nav-icon
-                emoji code='newspaper'
+                emoji code=navigation.emoji
             div.nav-text
-                -- HOME
-    div.nav-box
-        a href='#'
-            div.nav-icon
-                emoji code='course'
-            div.nav-text
-                -- COURSES
-    div.nav-box
-        a href='#'
-            div.nav-icon
-                emoji code='snippets'
-            div.nav-text
-                -- SNIPPETS
-    div.nav-box
-        a href='#'
-            div.nav-icon
-                emoji code='toolbox'
-            div.nav-text
-                -- TOOLBOX
+                -- $!{navigation.text}
