--- a/src/components/post-summary/index.marko
+++ b/src/components/post-summary/index.marko
@@ -1,6 +1,6 @@
 $ const mock = {
     date: '11/2/2017',
-    link: '#postlink',
+    link: '/test--post--text/1233534',
     title: 'Creating a new tech blog!',
     content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fermentum turpis ex, non mattis nulla blandit at. Etiam ultrices lobortis egestas. Etiam euismod purus nisl, vitae tempus felis gravida sed. Donec id bibendum enim. Sed pharetra, ligula ut venenatis faucibus, sapien felis sodales lacus, nec mollis ex nisi ultrices arcu. Nam auctor lectus mauris, vitae faucibus ligula auctor sed. Aenean ultricies felis non dui rhoncus, eget porttitor metus aliquet. Curabitur a nulla est. Etiam dictum aliquam diam. Pellentesque ornare posuere arcu sit amet facilisis. Maecenas hendrerit rhoncus dictum. Sed auctor augue in turpis fermentum, vehicula lacinia tortor faucibus. Vivamus ornare gravida placerat. Quisque ultricies in lorem ut maximus.',
     tags: ['blog', 'markojs', 'pwa'],
