Homepage navigation, emojis, post detail.

--- a/src/components/emoji/index.marko
+++ b/src/components/emoji/index.marko
@@ -8,7 +8,8 @@ $ {
         'course': '📚',
         'toolbox': '⚡',
         'snippets': '💼',
-        'video':'🎬'
+        'video':'🎬',
+        'search':'🔎'
     };
 
     const emoji = input.code ? (emojis[input.code] || '') : '';
