--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -4,5 +4,7 @@ div.header
         -- PureJS
     div.search if(!input.disableSearch)
         span -- PureJS.hasOwnProperty('
-        input type="text"
-        span -- ');
+        input#searchInput type="text"
+        span#searchTrigger
+            -- ');
+            emoji code='search'
