--- a/src/components/posts-container/index.marko
+++ b/src/components/posts-container/index.marko
@@ -4,7 +4,7 @@ style {
     }
 }
 
-$ const style = 'width:'+input.width+'px;'+(input.float ? 'float:'+input.float : '');
+$ const style = 'max-width:'+input.width+'px;'+(input.float ? 'float:'+input.float : '');
 
 div.posts-container style=style
     post-summary
