--- a/src/components/grid/index.marko
+++ b/src/components/grid/index.marko
@@ -1,4 +1,4 @@
-$ const style = 'width:'+input.width+'px;'+(input.float ? 'float:'+input.float+';' : '')+(input.marginTop ? 'margin-top:'+input.marginTop+'px;' : '');
+$ const style = 'max-width:100%;width:'+input.width+'px;'+(input.float ? 'float:'+input.float+';' : '')+(input.marginTop ? 'margin-top:'+input.marginTop+'px;' : '');
 
 div style=style
     include(input)
