--- a/src/components/left-content-navigation/style.css
+++ b/src/components/left-content-navigation/style.css
@@ -22,3 +22,36 @@
 .nav-box:hover .nav-text {
     font-size: 1.25rem;
 }
+
+@media only screen and (max-width: 880px) {
+    .left-buttons {
+        position: static !important;
+        width: 100%;
+        margin-bottom: 20px;
+        background-color: white;
+    }
+
+    .nav-box{
+        float: left;
+        width: 20%;
+        margin-bottom: 0px;
+    }
+
+    .nav-icon{
+        font-size: 1.6rem;
+    }
+
+    .nav-text{
+        font-size: 0.9rem;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    .nav-icon{
+        font-size: 1.5rem;
+    }
+
+    .nav-text{
+        font-size: 0.8rem;
+    }
+}
