--- a/src/components/left-content-navigation/style.css
+++ b/src/components/left-content-navigation/style.css
@@ -11,6 +11,11 @@
     margin-bottom: 20px;
 }
 
+.nav-box a{
+    height: 100%;
+    display: inherit;
+}
+
 .nav-box.active{
     background-color: rgba(148,232,46,0.8);
     color: white;
@@ -44,20 +49,20 @@
     }
 
     .nav-icon{
-        font-size: 1.6rem;
+        font-size: 1.6rem !important;
     }
 
     .nav-text{
-        font-size: 0.9rem;
+        font-size: 0.9rem !important;
     }
 }
 
 @media only screen and (max-width: 880px) {
     .nav-icon{
-        font-size: 1.5rem;
+        font-size: 1.5rem !important;
     }
 
     .nav-text{
-        font-size: 0.8rem;
+        font-size: 0.8rem !important;
     }
 }
