--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -1,7 +1,7 @@
 div.header
     lasso-img src="./logo.png" width=50 height=50
     a href="/"
-        -- PureJS
+        -- Worm
     div.search if(!input.disableSearch)
         span -- PureJS.hasOwnProperty('
         input#searchInput type="text"
