--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -4,6 +4,8 @@
 <html>
     <head>
         <title>PureJS</title>
+        <meta name="description" content="Tips, tricks, snippets and courses about Javascript.">
+        <meta name="keywords" content="javascript, web, nodejs, marko, programming, language, angularjs, express, react, vuejs">
         <favicon />
         <meta charset='utf-8'>
         <meta name="theme-color" content="#92A37D">
