Soon, name port fixes

--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -1,9 +1,10 @@
 div.header
-    lasso-img src="./logo.png" width=50 height=50
     a href="/"
-        -- Worm
+        lasso-img src="./logo.png" width=50 height=50
+        lasso-img src="./worm.png" width=50 height=50
+        span -- JsWorm
     div.search if(!input.disableSearch)
-        span -- PureJS.hasOwnProperty('
+        span -- JsWorm.hasOwnProperty('
         input#searchInput type="text"
         span#searchTrigger
             -- ');
