--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -18,10 +18,13 @@
     height: 50px;
     line-height: 50px;
     float: left;
-    margin-left: 10px;
     font-size: 34px;
     font-weight: 400;
     font-style: normal;
+}
+
+.header a span{
+    margin-left: 10px;
 }
 
 .header div{
@@ -57,8 +60,8 @@
     }
 
     .header a{
-        width: 20px;
-        height: 20px;
+        width: 150px;
+        height: 50px;
         font-size: 21px;
         margin-left: 5px;
     }
@@ -72,7 +75,7 @@
     }
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (max-width: 395px) {
     .header img{
         width: 20px;
         height: 20px;
@@ -80,10 +83,18 @@
     }
 
     .header a{
-        width: 15px;
-        height: 15px;
+        width: auto;
+        height: auto;
         font-size: 17px;
         margin-left: 5px;
+    }
+
+    .header a img{
+        display: none;
+    }
+
+    .header a span{
+        display: none;
     }
 
     .header div span {
