--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PureJS</title>
+        <title>JsWorm</title>
         <meta name="description" content="Tips, tricks, snippets and courses about Javascript.">
         <meta name="keywords" content="javascript, web, nodejs, marko, programming, language, angularjs, express, react, vuejs">
         <favicon />
