--- a/src/routes/offline/template.marko
+++ b/src/routes/offline/template.marko
@@ -1,6 +1,6 @@
 <layout-offline>
     <@body>
-        <h2 style="color: white;">PureJS is working in offline mode!</h2>
+        <h2 style="color: white;">JsWorm is working in offline mode!</h2>
         <post-summary />
         <post-summary type="black"/>
         <post-summary />
