Soon, name port fixes

--- a/src/components/header/index.marko
+++ b/src/components/header/index.marko
@@ -1,8 +1,7 @@
 div.header
+    lasso-img src="./logo.png" width=50 height=50
     a href="/"
-        lasso-img src="./logo.png" width=50 height=50
-        lasso-img src="./worm.png" width=50 height=50
-        span -- JsWorm
+        -- JsWorm
     div.search if(!input.disableSearch)
         span -- JsWorm.hasOwnProperty('
         input#searchInput type="text"
