--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -11,6 +11,7 @@
         <meta name="theme-color" content="#92A37D">
         <link rel="manifest" href="/manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <gtag />
         <include(input.layoutHead) />
         <lasso-head/>
     </head>
