--- a/src/components/root-html/components/gtag/index.marko
+++ b/src/components/root-html/components/gtag/index.marko
@@ -1,8 +1,2 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110080564-1"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
-gtag('config', 'UA-110080564-1');
-</script>
+<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-110080564-1');</script>
