--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -12,6 +12,7 @@
         <link rel="manifest" href="/manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <gtag />
+        <ogp />
         <include(input.layoutHead) />
         <lasso-head/>
     </head>
