--- a/src/components/root-html/components/gtag/index.marko
+++ b/src/components/root-html/components/gtag/index.marko
@@ -1,2 +1,4 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110080564-1"></script>
 <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-110080564-1');</script>
+<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+<script>firebase.initializeApp({apiKey: "AIzaSyAlKHEUL3UVROGcsfv3m907DdDA8OHKre8",authDomain: "jsworm-371f4.firebaseapp.com",databaseURL: "https://jsworm-371f4.firebaseio.com",projectId: "jsworm-371f4",storageBucket: "",messagingSenderId: "805229838088"});</script>
