--- a/src/components/root-html/index.marko
+++ b/src/components/root-html/index.marko
@@ -14,12 +14,13 @@
         <gtag />
         <ogp />
         <include(input.layoutHead) />
-        <lasso-head/>
+        <style>html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}a{background-color:transparent;-webkit-text-decoration-skip:objects}img{border-style:none}input{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}input{overflow:visible}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}.header{height:70px;background-color:white;box-sizing:border-box;padding:10px;margin-bottom:20px}.header a{color:rgba(0,0,0,0.75)}.header img{float:left}.header a{height:50px;line-height:50px;float:left;margin-left:10px;font-size:34px;font-weight:400;font-style:normal}.header div{height:50px;line-height:50px;float:right}.header input{border:none;border-bottom:1px solid #ccc;text-align:center;width:30px;background-color:transparent}@media only screen and (max-width:500px){.header img{width:30px;height:30px;margin-top:10px}.header a{width:20px;height:20px;font-size:21px;margin-left:5px}.header div span{font-size:14px}}@media only screen and (max-width:340px){.header img{width:20px;height:20px;margin-top:10px}.header a{width:15px;height:15px;font-size:17px;margin-left:5px}.header div span{font-size:12px}}.wrapper{margin:0 auto;width:100%;box-sizing:border-box}body{background-color:#24292e;margin:0;font-family:'Roboto',sans-serif;color:rgba(0,0,0,0.75)}a{text-decoration:none;color:inherit}</style>
     </head>
 
     <body>
         <include(input.layoutContent) />
         <lasso-body/>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <lasso-head/>
     </body>
 </html>
